style(header): add left padding to card header

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             padding: 1rem;
             box-shadow: 0 0 30px rgba(255, 215, 0, 0.1);
         }
-        .card-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem; border-bottom: 1px solid rgba(255,215,0,0.3); padding-bottom: 0.5rem; }
+        .card-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem; border-bottom: 1px solid rgba(255,215,0,0.3); padding-bottom: 0.5rem; padding-left: 15px; }
         .team-emblem { color: var(--osiris-gold); font-size: 1.5rem; text-shadow: 0 0 10px var(--osiris-glow); }
         .player-number { font-family: var(--font-tech); font-size: 2rem; color: var(--osiris-gold); font-weight: 900; }
         .photo-frame { position: relative; width: 100%; height: 400px; overflow: hidden; clip-path: polygon(0 0, 100% 0, 100% 85%, 85% 100%, 0 100%); margin-bottom: 1rem; }
