feat: add accumulated technique points status bar

--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
             <div class="status-value">MIXIMAX + KESHIN</div>
         </div>
 
+        <div class="status-bar" style="border-left-color: var(--hologram-blue);">
+            <div class="status-label">Points Technique Accumulés</div>
+            <div class="status-value">10</div>
+        </div>
+
         <div style="margin-top: 1.5rem; text-align: center; opacity: 0.7; font-size: 0.8rem;">
             <i class="fas fa-quote-left" style="color: var(--osiris-gold);"></i>
             Je suis l'ombre qui protège la lumière.
